# OpenCV-PG

./: CMakeLists.txt  CmakeLists.txt  FLIR example to OpenCV MAT  Gst_pcl.cpp  Network config.txt  Receiver Pipeline.txt  compile.txt  opencv_gstreamer.cpp  opencvtest.cpp  overlaytext.cpp  readme  receiver_gui.cpp  zed.cpp
rectangles/: CmakeLists.txt  rectangles.cpp  rectangles1.cpp
testa/: test.cpp
